Replace 'get(0)' with sequenced collection method 'getFirst()' to access first element in collections - part 1